--- a/app/static/urls/compare.html
+++ b/app/static/urls/compare.html
@@ -71,7 +71,7 @@
   async function doPost(list_offer_product_id, market, store_id) {
     // функция отправляет в Сбермаркет продуктовую корзину
     let data = [list_offer_product_id, market, store_id]; 
-      const response = await fetch('http://localhost/push_product_list', {
+      const response = await fetch('/push_product_list', {
       method: 'POST', 
       headers: {
         'Content-Type': 'application/json;charset=utf-8',
@@ -81,7 +81,7 @@
   }
 </script>
 
-<script src="http://localhost/static/scripts/product_list.js" 
+<script src="/static/scripts/product_list.js" 
   type="text/javascript">
 </script>
 <script>
