--- a/app/static/urls/store.html
+++ b/app/static/urls/store.html
@@ -4,7 +4,7 @@
   <title>Товары, доступные в {{ market.name }}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://localhost:80/static/css/styles.css">
+  <link rel="stylesheet" href="/static/css/styles.css">
   <!-- Bootstrap CSS (jsDelivr CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
@@ -113,12 +113,6 @@
       </ul>
       <p id="total_price">
       </p>
-      <!--
-<span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" title="Отключенная подсказка">
-  <button class="btn btn-primary" type="button" disabled>Отключенная кнопка</button>
-</span>
-
-      -->
       <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" 
         title="Добавьте в корзину хотя бы один товар">
         <a class="btn btn-primary" id="compare_button" 
@@ -137,7 +131,7 @@
   </footer>
   
 <script type="text/javascript" 
-  src="http://127.0.0.1/static/scripts/product_list.js">
+  src="/static/scripts/product_list.js">
 </script>
 
 <script>
@@ -168,7 +162,7 @@
     }
     const request_body = slug_list.join('&');
     sessionStorage.setItem('cart_list', JSON.stringify(cart_list));
-    window.location.href = "http://127.0.0.1/compare/order=" + request_body;
+    window.location.href = "/compare/order=" + request_body;
 
   }
 
