correction of design errors

--- a/app/static/urls/admin_panel.html
+++ b/app/static/urls/admin_panel.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ru">
 <head>
-  <title>Сравнение цен</title>
+  <title>Административная панель</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/static/css/styles.css">
@@ -12,7 +12,6 @@
 
 </head>
 <body>
-  <h1>Админист</h1>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -29,7 +28,6 @@
       </div>
     </nav>
   </header>
-  <h1>Административная панель</h1>
   {% if login %}
     <p>Здравствуйте, {{ login }}</p>
   {% else %}
